added another notebook that is more complete

--- a/rotation_v09_use_models_file.ipynb
+++ b/rotation_v09_use_models_file.ipynb
@@ -2529,7 +2529,10 @@
    "cell_type": "markdown",
    "id": "4da87c02",
    "metadata": {},
-   "source": []
+   "source": [
+    "# TODO\n",
+    "make sure outputs are saved.  They should be named according to their architecture.  The dataset they are trained on.  And which repeat they are."
+   ]
   },
   {
    "cell_type": "markdown",
