completed proposal for fixed benchmark_models

--- a/benchmark/benchmark.ipynb
+++ b/benchmark/benchmark.ipynb
@@ -184,12 +184,12 @@
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "models = {\n",
-    "    'VanillaCNN' : {'model' : VanillaCNN(img_channels = n_channels, n0 = 32, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialECNN' : {'model' : TrivialECNN(img_channels = n_channels, n0 = 67, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialIrrepECNN' : {'model' : TrivialIrrepECNN(img_channels = n_channels, n0 = 62, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'RegularECNN' : {'model' : RegularECNN(img_channels = n_channels, n0 = 29, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialMoment' : {'model' : TrivialMoment(img_channels = n_channels, n0 = 55, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialIrrepMoment' : {'model' : TrivialIrrepMoment(img_channels = n_channels, n0 = 59, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
+    "    'VanillaCNN' : {'model' : VanillaCNN(n_channels, 32, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialECNN' : {'model' : TrivialECNN(n_channels, 67, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialIrrepECNN' : {'model' : TrivialIrrepECNN(n_channels, 62, n_classes, 3, 1, num_layers)},\n",
+    "    'RegularECNN' : {'model' : RegularECNN(n_channels, 29, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialMoment' : {'model' : TrivialMoment(n_channels, 55, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialIrrepMoment' : {'model' : TrivialIrrepMoment(n_channels, 59, n_classes, 3, 1, num_layers)},\n",
     "}"
    ]
   },
@@ -1379,12 +1379,12 @@
     "model_name = 'TrivialMoment'\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "models = {\n",
-    "    'VanillaCNN' : {'model' : VanillaCNN(img_channels = n_channels, n0 = 32, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialECNN' : {'model' : TrivialECNN(img_channels = n_channels, n0 = 67, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialIrrepECNN' : {'model' : TrivialIrrepECNN(img_channels = n_channels, n0 = 62, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'RegularECNN' : {'model' : RegularECNN(img_channels = n_channels, n0 = 29, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialMoment' : {'model' : TrivialMoment(img_channels = n_channels, n0 = 55, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
-    "    'TrivialIrrepMoment' : {'model' : TrivialIrrepMoment(img_channels = n_channels, n0 = 59, n_classes = n_classes, kernel_size = 3, padding = 1, num_layers = num_layers)},\n",
+    "    'VanillaCNN' : {'model' : VanillaCNN(n_channels, 32, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialECNN' : {'model' : TrivialECNN(n_channels, 67, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialIrrepECNN' : {'model' : TrivialIrrepECNN(n_channels, 62, n_classes, 3, 1, num_layers)},\n",
+    "    'RegularECNN' : {'model' : RegularECNN(n_channels, 29, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialMoment' : {'model' : TrivialMoment(n_channels, 55, n_classes, 3, 1, num_layers)},\n",
+    "    'TrivialIrrepMoment' : {'model' : TrivialIrrepMoment(n_channels, 59, n_classes, 3, 1, num_layers)},\n",
     "}"
    ]
   },
