moved files + progress on dataset class mapping labels

--- a/data_generator.ipynb
+++ b/data_generator.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
+    "import csv\n",
     "import math\n",
     "import random as rand\n",
     "from tqdm import tqdm\n",
@@ -33,37 +34,26 @@
    "source": [
     "## **Extract ROIs**\n",
     "\n",
-    "You will need to manually delete the save directories in order to regenerate to ROIs (as a precaution against accidentally running and overwriting). "
+    "You will need to manually delete the save directories in order to regenerate to ROIs as a precaution against accidentally running and overwriting. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 213/213 [07:19<00:00,  2.06s/it]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All ROIs extracted from /nafs/dtward/allen/npz_files/ and saved to /nafs/dtward/allen/rois/64x64_sample_rate_0_5_mode/ under train and test subfolders\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "/nafs/dtward/allen/rois/64x64_sample_rate_0_5_center/ already exists. If you intend to re-extract the ROIs, please delete the directory first.\n",
+      "/nafs/dtward/allen/rois/64x64_sample_rate_0_5_all/ already exists. If you intend to re-extract the ROIs, please delete the directory first.\n",
+      "/nafs/dtward/allen/rois/64x64_sample_rate_0_5_mode/ already exists. If you intend to re-extract the ROIs, please delete the directory first.\n"
      ]
     }
    ],
    "source": [
+    "# Extract ROIs and ensure the ROIs' assigned label is the center of the ROI\n",
     "ROI_size = (64, 64)\n",
     "sampling_rate = 0.5\n",
     "str_sampling_rate = str(sampling_rate).replace('.', '_')\n",
@@ -77,7 +67,10 @@
     "    os.makedirs(abs_save_dir)\n",
     "    extractor_center = ExtractROI(extract_dir=extract_dir, save_dir=abs_save_dir)\n",
     "    extractor_center.extract_ROI(ROI_size=ROI_size, sampling_rate=sampling_rate, label_mode='center')\n",
+    "else:\n",
+    "    print(f\"{abs_save_dir} already exists. If you intend to re-extract the ROIs, please delete the directory first.\")\n",
     "\n",
+    "# Extract ROIs and ensure the ROIs' assigned labels are maintained as an n x n where each pixel is some label (segmentation)\n",
     "ROI_size = (64, 64)\n",
     "sampling_rate = 0.5\n",
     "str_sampling_rate = str(sampling_rate).replace('.', '_')\n",
@@ -91,7 +84,10 @@
     "    os.makedirs(abs_save_dir)\n",
     "    extractor_all = ExtractROI(extract_dir=extract_dir, save_dir=abs_save_dir)\n",
     "    extractor_all.extract_ROI(ROI_size=ROI_size, sampling_rate=sampling_rate, label_mode='all')\n",
+    "else:\n",
+    "    print(f\"{abs_save_dir} already exists. If you intend to re-extract the ROIs, please delete the directory first.\")\n",
     "\n",
+    "# Extract ROIs and ensure the ROIs' assigned label is the mode of all the labels in the ROI\n",
     "ROI_size = (64, 64)\n",
     "sampling_rate = 0.5\n",
     "str_sampling_rate = str(sampling_rate).replace('.', '_')\n",
@@ -104,7 +100,9 @@
     "if not os.path.exists(abs_save_dir):\n",
     "    os.makedirs(abs_save_dir)\n",
     "    extractor_all = ExtractROI(extract_dir=extract_dir, save_dir=abs_save_dir)\n",
-    "    extractor_all.extract_ROI(ROI_size=ROI_size, sampling_rate=sampling_rate, label_mode='mode')"
+    "    extractor_all.extract_ROI(ROI_size=ROI_size, sampling_rate=sampling_rate, label_mode='mode')\n",
+    "else:\n",
+    "    print(f\"{abs_save_dir} already exists. If you intend to re-extract the ROIs, please delete the directory first.\")"
    ]
   },
   {
@@ -116,19 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 501, 64, 64]) torch.Size([32, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "train_dir = '/nafs/dtward/allen/rois/64x64_sample_rate_0_5_mode/train/'\n",
     "test_dir = '/nafs/dtward/allen/rois/64x64_sample_rate_0_5_mode/test/'\n",
+    "label_map_file = '/nafs/dtward/allen/rois/substructures.csv' # divisions.csv, organs.csv, structures.csv, substructures.csv, categories.csv\n",
     "\n",
-    "train_dataset = AtlasDataset(data_dir=train_dir)\n",
-    "test_dataset = AtlasDataset(data_dir=test_dir)\n",
+    "train_dataset = AtlasDataset(data_dir=train_dir, label_map_file=label_map_file)\n",
+    "test_dataset = AtlasDataset(data_dir=test_dir, label_map_file=label_map_file)\n",
     "\n",
     "bs = 32\n",
     "train_loader = DataLoader(train_dataset, batch_size=bs, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=bs, shuffle=True)"
+    "test_loader = DataLoader(test_dataset, batch_size=bs, shuffle=True)\n",
+    "\n",
+    "sample_batch = next(iter(train_loader))\n",
+    "print(sample_batch[0].shape, sample_batch[1].shape)"
    ]
   }
  ],
