--- a/moment_kernels_v00.ipynb
+++ b/moment_kernels_v00.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8008b5a9",
+   "id": "ea6958ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b65ebcd",
+   "id": "671c3a83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8b4cbc3",
+   "id": "aae922a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3285a6fa",
+   "id": "44e31852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "686c62a5",
+   "id": "89be0c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "07cdd090",
+   "id": "99c0b24c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64735712",
+   "id": "3e50be19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4bfae98b",
+   "id": "8428ee17",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "202bab63",
+   "id": "b7c62e7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5c983b4d",
+   "id": "aa2cec9b",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bd004662",
+   "id": "be44b849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ff2459f0",
+   "id": "c9492947",
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "60834ab7",
+   "id": "16afa50b",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6a08e277",
+   "id": "fe67c646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "60372441",
+   "id": "2521786f",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0cc4761e",
+   "id": "25e0143a",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c6e42ba6",
+   "id": "eb2eac1c",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "649d3e68",
+   "id": "4f70b99e",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0534ba36",
+   "id": "a84d8cdb",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "52b88d44",
+   "id": "9d08fe6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c07d8097",
+   "id": "87414bac",
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d353772d",
+   "id": "f7c6fc90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20657003",
+   "id": "d1b423b3",
    "metadata": {
     "scrolled": false
    },
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5d140deb",
+   "id": "81204bd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91f767da",
+   "id": "dc55442e",
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a2289b41",
+   "id": "4488ad5d",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3201acbf",
+   "id": "db527300",
    "metadata": {},
    "outputs": [
     {
@@ -1641,18 +1641,18 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d43961d1",
+   "id": "1e52fa42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer1 = torch.optim.Adam(net1.parameters(),lr=lr)\n",
+    "#optimizer1 = torch.optim.Adam(net1.parameters(),lr=lr)\n",
     "optimizer1 = torch.optim.AdamW(net1.parameters(),lr=lr)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cfdefb74",
+   "id": "7bd3febb",
    "metadata": {},
    "outputs": [
     {
@@ -2725,7 +2725,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4b0a8fee",
+   "id": "c7c5288f",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4ccdde28",
+   "id": "ed6ed833",
    "metadata": {},
    "outputs": [
     {
@@ -2829,7 +2829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1e9d22e6",
+   "id": "e30ca2dd",
    "metadata": {},
    "outputs": [
     {
@@ -3835,7 +3835,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e3055101",
+   "id": "5b12841f",
    "metadata": {},
    "outputs": [
     {
@@ -3916,7 +3916,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7b250319",
+   "id": "266e4a95",
    "metadata": {},
    "outputs": [
     {
@@ -4922,7 +4922,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6be82cec",
+   "id": "883b0fb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4932,7 +4932,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "762edcf9",
+   "id": "75be3f01",
    "metadata": {
     "scrolled": false
    },
@@ -25495,7 +25495,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9f5ab1f3",
+   "id": "3df8bd69",
    "metadata": {
     "scrolled": false
    },
@@ -46051,7 +46051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fabad3dd",
+   "id": "fea3702d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -46059,7 +46059,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8b7d25b2",
+   "id": "316943e3",
    "metadata": {},
    "outputs": [
     {
@@ -47060,7 +47060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0cf93e8",
+   "id": "582d291f",
    "metadata": {},
    "outputs": [],
    "source": []
